﻿+++++++++++
Python News
+++++++++++

What's New in Python 3.2 Alpha 3?
=================================

*Release date: XX-Oct-2010*

Core and Builtins
-----------------

- Issue #4617: Previously it was illegal to delete a name from the local
  namespace if it occurs as a free variable in a nested block.  This limitation
  of the compiler has been lifted, and a new opcode introduced (DELETE_DEREF).

- Issue #9804: ascii() now always represents unicode surrogate pairs as
  a single ``\UXXXXXXXX``, regardless of whether the character is printable
  or not.  Also, the "backslashreplace" error handler now joins surrogate
  pairs into a single character on UCS-2 builds.

- Issue #9757: memoryview objects get a release() method to release the
  underlying buffer (previously this was only done when deallocating the
  memoryview), and gain support for the context management protocol.

- Issue #9797: pystate.c wrongly assumed that zero couldn't be a valid
  thread-local storage key.

Library
-------

- Issue #9579, #9580: Fix os.confstr() for value longer than 255 bytes and
  encode the value with filesystem encoding and surrogateescape (instead of
  utf-8 in strict mode). Patch written by David Watson.

- Issue #9632: Remove sys.setfilesystemencoding() function: use
  PYTHONFSENCODING environment variable to set the filesystem encoding at
  Python startup. sys.setfilesystemencoding() creates inconsistencies because
  it is unable to reencode all filenames in all objects.

- Issue #9410: Various optimizations to the pickle module, leading to
  speedups up to 4x (depending on the benchmark).  Mostly ported from
  Unladen Swallow; initial patch by Alexandre Vassalotti.

- The pprint module now supports printing OrderedDicts in their given
  order (formerly, it would sort the keys).

- Logging: Added QueueHandler class to facilitate logging usage with
  multiprocessing.

- Issue #9707: Rewritten reference implementation of threading.local which